--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,12 @@
 {
     "python.analysis.extraPaths": [
-        "./business_object",
-        "./service",
-        "./dao"
+        "./*"
     ],
-	
     "terminal.integrated.env.windows": {
-        "PYTHONPATH": "${workspaceFolder}/src",
+        "PYTHONPATH": "${workspaceFolder}",
     },
-	
-	"terminal.integrated.env.linux": {
-		"PYTHONPATH": "${workspaceFolder}/src",
-	},
-	
-	"python.languageServer": "Jedi"
+    "terminal.integrated.env.linux": {
+        "PYTHONPATH": "${workspaceFolder}",
+    },
+    "python.languageServer": "Jedi"
 }
