add script reset db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "terminal.integrated.env.linux": {
         "PYTHONPATH": "${workspaceFolder}/src",
     },
+    "terminal.integrated.env.osx": {
+        "PYTHONPATH": "${workspaceFolder}/src",
+    },
     "python.languageServer": "Jedi"
 }
