--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.formatOnSave": true,
+    "python.formatting.autopep8Path": "autopep8",
     "python.analysis.extraPaths": [
         "./*"
     ],
