gerer une table updated

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-HOST_WEBSERVICE=https://www.dnd5eapi.co/api
+HOST_WEBSERVICE = "https://www.dnd5eapi.co/api"
 
-PASSWORD=idxxxx
-HOST=sgbd-eleves.domensai.ecole
-PORT=5432
-DATABASE=idxxxx
-USER=idxxxx
+PASSWORD = id1955
+HOST = sgbd-eleves.domensai.ecole
+PORT = 5432
+DATABASE = id1955
+USER = id1955
 
-NB_MAX_PERSONNAGES_PAR_JOUEUR=3
-NB_JOUEURS_MAX_PAR_TABLE=5
-NB_TABLES_MAX_PAR_SEANCE=10
+
+NB_MAX_PERSONNAGES_PAR_JOUEUR = 3
+NB_JOUEURS_MAX_PAR_TABLE = 5
+NB_TABLES_MAX_PAR_SEANCE = 10
