--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 HOST_WEBSERVICE = "https://www.dnd5eapi.co/api"
 
-PASSWORD = id1955
+PASSWORD = idxxxx
 HOST = sgbd-eleves.domensai.ecole
 PORT = 5432
-DATABASE = id1955
-USER = id1955
+DATABASE = idxxxx
+USER = idxxxx
 
 
 NB_MAX_PERSONNAGES_PAR_JOUEUR = 3
